--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,10 @@
 
         <div id="results">
         </div>
+        
+        <footer>
+            <p>&copy; Angela & Mohamed </p>
+        </footer>
     </div>
 
     <script src="script.js"></script>
